Fix bug on iOS platform

--- a/assets/_scss/_index.scss
+++ b/assets/_scss/_index.scss
@@ -10,6 +10,7 @@
 
     img {
         margin-top: 20px;
-        width: 800px;
+        width: 100%;
+        max-width: 800px;
     }
 }
